fix too narrow thumbnail for report tutorial

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -45,6 +45,10 @@ iframe.sg_report {
     display: block;
     border-style: solid;
 }
+/* gallery thumbnail size */
+.sphx-glr-thumbcontainer {
+    min-width: 160px;
+}
 
 /* ******************************** make HTML'd pandas dataframes scrollable */
 output_html {
